space management work

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -5160,7 +5160,7 @@ a.recodBlck:hover {
 .addNwWard {
     text-align: center;
 }
-.addNwWard label {
+.addNwWard p {
     color: #00ABAF;
     font-family: Muli;
     font-size: 12px;
