Add the houses to the admin staff and manage it

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13114,6 +13114,11 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+.delet-house{
+    color: red !important;
+    font-weight: bold;
+    cursor: pointer;
+}
 .current_pass_sec{
     margin-top:20px;
 }
