get instiute, select insitute, add spaeciality of it and listing

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13114,6 +13114,9 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+.medcalFZCntnt {
+    margin: 0px 10px;
+}
 .delet-house{
     color: red !important;
     font-weight: bold;
