some changes o trello issues related to design or spelling mistake

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2023,9 +2023,6 @@ a.profilMenu {
         margin-top: 26px !important;
         margin-bottom: 16px !important;
     }
-    /* .apointUpcom {
-        display: none !important;
-    } */
     .appointArang {
         padding: 0px 18px !important;
     }
@@ -2072,9 +2069,6 @@ a.profilMenu {
     .syncRght {
         display: block !important;
         margin-bottom: 8px !important;
-    }
-    .mkFmlyDoc div div {
-        padding: 12px 5px !important;
     }
     .scndOpinionIner tbody tr {
         border-bottom: 1px solid #000 !important;
@@ -4115,7 +4109,6 @@ button.aboutTabsIner {
 }
 
 /* my doctors css */
-
 .fmlyDoc h3 {
     color: #000808;
     font-family: Muli;
@@ -4143,6 +4136,11 @@ button.aboutTabsIner {
     font-weight: 600;
     letter-spacing: 0;
     line-height: 18px;
+}
+.mkFmlyDoc div {
+    color: #000000 !important;
+    font-size: 12px;
+    line-height: 13px;
 }
 .addDocUpr {
     margin-top: 24px;
@@ -4436,9 +4434,6 @@ button.aboutTabsIner {
     background-color: #FFFFFF;
 }
 .donarLang .css-1pahdxg-control{
-    /* border-color: #2684FF;
-    border-radius: 4px;
-    border-style: solid; */
     border-color: none !important;
     border-width: none !important;
     box-shadow: initial !important;
@@ -4642,11 +4637,9 @@ button.aboutTabsIner {
 .vsblAllTim .MuiInput-underline:after{
     content: initial !important;
 }
-.vsblAllTim input{
-    border: 1px solid #BFC1C1;
+.vsblAllTim input {
     border-radius: 4px;
     background-color: #FFFFFF;
-    padding: 10px 8px;
     color: #000808;
     font-family: Muli;
     font-size: 14px;
@@ -5336,9 +5329,15 @@ span.revwRed{
     border-bottom: 1px solid #F2F2F2;
     padding: 20px 18px;
 }
+.docInfoName {
+    position: relative;
+}
 .docInfoName img {
     width: 16px;
     border-radius: 28px;
+    position: absolute;
+    left: 0px;
+    top: 0px;
 }
 .docInfoName span {
     color: #000808;
@@ -5443,9 +5442,6 @@ span.revwRed{
     background-color: #FFFFFF;
     box-shadow: 0 8px 16px 0 rgba(0,8,8,0.08);
 }
-/* .docArund {
-    border-bottom: 1px solid #F2F2F2;
-} */
 .docArund label {
     color: #404646;
     font-family: Muli;
@@ -5560,9 +5556,6 @@ span.revwRed{
     display: inline-block;
     cursor: pointer;
 }
-/* .presTabs {
-    background-color: #fff !important;
-} */
 .presTabs button span {
     color: #7F8383;
     font-family: Muli;
@@ -5596,7 +5589,6 @@ button.presTabsIner {
 .presSrch a, .toolSearch {
     border-radius: 8px;
     border: 1px solid #bfc1c1;
-    /* background-color: #F2F2F2; */
     padding: 5px 7px;
     margin-top: 3px;
     display: inline-block;
@@ -5643,7 +5635,6 @@ button.presTabsIner {
     border-radius: 5px;
 }
 td.presEditDot {
-    /* min-width: 200px; */
     text-align: right;
 }
 .totalOutOff a {
@@ -5713,6 +5704,7 @@ a.nxtpag {
 .nwPresCourse {
     padding: 12px 24px 18px 24px;
     border-bottom: 1px solid #F2F2F2;
+    position: relative;
 }
 .nwPresCloseBtn {
     text-align: right;
@@ -6198,13 +6190,6 @@ img.addBlue {
     letter-spacing: 0;
     line-height: 20px;
 }
-/* .scndOptionIner {
-    min-height: 52px;
-    border-radius: 12px;
-    background-color: #FFFFFF;
-    box-shadow: 0 1px 8px 0 rgba(0,8,8,0.04);
-    padding: 14px 20px;
-} */
 img.openScnd {
     height: 24px;
     width: 24px;
@@ -9528,7 +9513,6 @@ a.menuActv img {
     cursor: pointer;
     text-decoration: none;
 }
-
 .dataBoxCntnt {
     width: 420px;
     background: #fff;
@@ -11505,7 +11489,6 @@ a.barViewnw {
 .slotTimDat {
     padding: 20px 21px 20px 21px;
 }
-
 .addBirthSlot label {
     color: #404646;
     font-family: Muli;
@@ -12929,12 +12912,12 @@ a.addNewPlus img {
     background-color: #00ABAF;
     color: #FFFFFF !important;
     font-family: Muli;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: bold;
     letter-spacing: 0;
     line-height: 16px;
     text-align: center;
-    padding: 12px 20px;
+    padding: 12px 18px;
     display: inline-block;
     cursor: pointer;
 }
@@ -13113,6 +13096,28 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+@media screen and (max-width:959px) {
+    .emergency-head h1 {
+        font-size: 22px;
+    }
+}
+
+.emergency-head h1 {
+    font-size: 28px;
+    color: #000808;
+    font-family: Muli;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 40px;
+    margin-top: 18px;
+    margin-bottom: 0px;
+    white-space: nowrap;
+    padding-left: 15px !important; 
+}
+.emergency-head {
+    padding-left: 0px !important;
+    margin-left: -12px !important;
+}
 .homeBg .chat-contact-list-ext-wrap, .homeBg .chat-ppl-list-ext-wrap {
     height: 72vh !important;
     margin-bottom: 24px;
@@ -13324,6 +13329,13 @@ a.academy_ul ul li img {
     }
     .docsOpinion label {
         margin-left: 20px;
+        margin-left: 20px;
+        margin-top: 18px;
+        margin-bottom: 10px;
+    }
+    .docsOpinLbl a {
+        margin-left: 20px;
+        margin-bottom: 10px;
     }
 }
 #cp-call-screen-container iframe #fullscreen .main-container{
@@ -13809,7 +13821,7 @@ g.highcharts-axis.highcharts-yaxis text {
     cursor: pointer;
 }
 .nwDiaCntntIner {
-    height: 580px !important; 
+    height: 496px !important; 
 }
 .phrmLinkUpr, .detailPrescp {	
     height: 520px !important;	
@@ -13929,15 +13941,12 @@ g.highcharts-axis.highcharts-yaxis text {
 .moreMenuList li a img {
     margin-right: 6px !important;
 }
-
 .canvases img {
     height: 150px !important;
     width: 100px !important;
     margin: 0px !important;
 }
 .scndOptionIner1 ul li img {
-    /* margin-right: 12px; */
-    /* height: 17px; */
     width: auto;
     padding-right: 10px;
 }
@@ -13958,12 +13967,12 @@ g.highcharts-axis.highcharts-yaxis text {
     border-radius: 4px;
     background-color: #FFFFFF;
     font-family: Muli;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 600;
     letter-spacing: 0;
     line-height: 18px;
     min-height: 40px;
-    padding: 0px 14px;
+    padding: 0px 12px;
     /* outline: none; */
 }
 .homeBgDrk .OrganMobile .flag-select {
@@ -14130,10 +14139,10 @@ span.unread_msg_notifyspan {
     display: inline-flex;
     margin-right: 15px;
 }
-.changeLang li span{
+.changeLang li span {
     padding-right: 10px;
 }
-.changeLang1 li span{
+.changeLang1 li span {
     padding-right: 10px;
 }
 .webLogo img, .MenuMobRght img, .LogoForms img{
@@ -14582,6 +14591,7 @@ a.activePageDocutmet {
     background-color: #00ABAF !important;
 }
 /*End Documents*/
+
 /*For Organ Donor*/
 .OrganMobile .flag-select {
     height: 37px;
@@ -14593,13 +14603,14 @@ a.activePageDocutmet {
     top: 0px !important;
 }
 /*End Organ Donor*/
+
 /* For Profile Page */
 .profilMenuList ul li:last-child {
     margin-top: 10px !important;
     padding-top: 10px;
 }
 .Mobile_extra{
-    padding-left: 20% !important; 
+    padding-left: 52px !important; 
 }
 .SelectedGender{
     background-color: #00ABAF !important;
@@ -14615,6 +14626,7 @@ a.activePageDocutmet {
     top: 0px !important;
 }
 /* End Profile Page */
+
 /* Not Found Page */
 .NotFound h1{
     color: #000808;
@@ -14625,7 +14637,6 @@ a.activePageDocutmet {
     letter-spacing: 0;
     line-height: 40px;
 }
-
 .NotFoundContent {
     border-radius: 12px;
     background-color: #FFFFFF;
@@ -15144,7 +15155,7 @@ input#graduationYear {
     color: #00ABAF !important;
 }
 .ccl-center-panel.ccl-chat-center-panel .cc1-chat-win-conver-wrap {
-    padding: 5px 35px 5px 20px !important;
+    padding: 5px 35px 105px 20px !important;
 }
 .inner.CreatChatInner {
     height: 100vh;
@@ -16174,9 +16185,6 @@ select:-webkit-autofill:focus {
  .presOpinionIner td.pivoted{
     padding: 12px 8px !important;
   }
-  /* a.openScndhrf{
-    text-align: left !important;
-  } */
 }
 @media screen and (min-width: 768px) and (max-width: 959px){
   .cc1-chat-win-conver-wrap{
@@ -16285,7 +16293,7 @@ select:-webkit-autofill:focus {
         margin-bottom: 14px;
     }
 }
-@media screen and (min-width: 960px) and (max-width: 1092px){
+@media screen and (min-width: 960px) and (max-width: 1092px) {
  .MenuLeftUpr {
     padding: 0px 3px;
  }
@@ -16299,12 +16307,36 @@ select:-webkit-autofill:focus {
     width: 20px;
   }
 }
-@media screen and (max-width: 467px){
+@media screen and (max-width: 467px) {
 .sortBySec label, .sortBySec input {
     margin-top: 4px;
     margin-bottom: 4px;
   }
   .downloadButton {
     float: left;
+  }
+}
+@media (min-width: 960px) {
+  .coursesTab {
+    padding: 12px 20px 12px 20px !important;
+  }
+}
+@media only screen and (max-width: 1200px) and (min-width: 960px) {
+    .docArund p {
+      min-height: 74px;
+    }
+}
+.nwPresCloseBtn {
+    position: absolute;
+    right: 18px;
+    top: 15px;
+}
+.react-confirm-alert-overlay {
+    z-index: 999;
+}
+@media (max-width: 568px) {
+  .homeBg .cc1-chat-win-user {
+    width: 100% !important;
+    margin: 14px 0px;
   }
 }
