correct css issue

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -10187,6 +10187,7 @@ button.crdoLghtBlu2 {
     line-height: 16px;
     text-align: center;
     margin-left: 10px;
+}
 .darkTheme .rvewFiles {
     background-color: #404646;
 }
