Correct the Trello issues, add ashish sir's work

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -199,7 +199,7 @@ h1,h2,h3,h4,h5,h6,h7,p{ margin:0; padding:0; font-size: inherit; font-weight: in
     padding-right: 12px;
 }
 .descpCntntMain {
-    padding-left: 50px;
+    padding-left: 70px;
     margin-bottom: 45px;
 }
 .addSpc {
@@ -2091,13 +2091,6 @@ a.profilMenu {
     .actvMain .MuiGrid-spacing-xs-3 {
         margin: 0px !important;
     }
-    .LanguageBoxMain {
-        height: 395px;
-        overflow-y: scroll;
-    }
-    .tablePagNum {
-        margin-top: 10px !important;
-    }
 }
 @media (max-width: 992px){ 
     .srvcBoxCntnt {
@@ -2640,6 +2633,7 @@ a.profilMenu {
 .wshLstHaiRght {
     text-align: right;
 }
+
 .wshCorList {
     border-radius: 12px;
     background-color: #FAFAFA;
@@ -5352,7 +5346,6 @@ span.revwRed{
     font-weight: 600;
     letter-spacing: 0;
     line-height: 18px;
-    padding-left: 22px;
 }
 .docInfo img {
     margin-right: 6px;
@@ -5367,7 +5360,7 @@ span.revwRed{
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 0;
-    line-height: 20px;
+    line-height: 14px;
     margin-bottom: 13px;
     display: flex !important;
 }
@@ -5920,7 +5913,7 @@ a.nxtpag {
     text-align: center;
     border: none;
     padding: 12px 8px;
-    margin-top: 0px;
+    margin-top: 22px;
     margin-bottom: 2px;
     outline: none;
 }
@@ -7339,9 +7332,6 @@ a.vsblDots, a.conPainDots, a.bp_vsblDots, a.hideDots {
 .homeBgDrk .emrgncyData h1 {
     color: #FAFAFA !important;
 }
-.homeBgDrk .emergency-head h1 { 
-    color: #FAFAFA !important;
-}
 .homeBgDrk .healthStatus h2, .homeBgDrk .otherInfo h2 {
     color: #FAFAFA !important;
 }
@@ -7387,7 +7377,7 @@ a.vsblDots, a.conPainDots, a.bp_vsblDots, a.hideDots {
     color: #BFC1C1 !important;
 }
 .homeBgDrk .docsOpinion label {
-    color: #FAFAFA !important;
+    color: #bfc1c1!important;
 }
 .homeBgDrk .presOpinionIner td.pivoted {
     color: #D9DADA !important;
@@ -7548,7 +7538,7 @@ a.vsblDots, a.conPainDots, a.bp_vsblDots, a.hideDots {
     color: #D9DADA !important;
 }
 .homeBgDrk .trckSection {
-    background-color: #c3c3c3 !important;
+    background-color: #4C5252!important;
 }
 .homeBgDrk .trckCntnt p {
     color: #BFC1C1 !important;
@@ -7640,6 +7630,7 @@ a.vsblDots, a.conPainDots, a.bp_vsblDots, a.hideDots {
 .homeBgDrk .mkFmlyDoc .css-yk16xz-control {
     background: transparent;
 }
+
 .homeBgDrk .loginSite {
     background: #192020;
 }
@@ -7657,37 +7648,8 @@ a.vsblDots, a.conPainDots, a.bp_vsblDots, a.hideDots {
 .homeBgDrk .loginSite .logFrgtpass label {
     color: #00ABAF !important;
 }
-.homeBgDrk .medicalLabl, .homeBgDrk .docCntct {
-    border-bottom: 1px solid #9c9c9c;
-}
-.homeBgDrk .docInfo {
-    border-bottom: 1px solid #9c9c9c;
-}
-.homeBgDrk .donarLang div {
-    background-color: #192020 !important;
-    color: #bfc1c1 !important;
-}
-.homeBgDrk .donarLang div {
-    background-color: #404646 !important;
-    color: #bfc1c1 !important;
-    outline: none !important;
-    border: none !important;
-}
-.homeBgDrk .donarLang div.MuiGrid-root {
-    border: 1px solid #BFC1C1 !important;
-    border-radius: 2px;
-}
-.homeBgDrk ul.flag-select__options {
-    background-color: #404646 !important;
-    color: #bfc1c1 !important;
-}
-.homeBgDrk ul.flag-select__options li:hover {
-    background-color: transparent;
-}
-.homeBgDrk .mkFmlyDoc div {
-    color: #BFC1C1 !important;
-}
 /* End of dark screen css */
+
 .welAimedis {
     border-radius: 8px;
     background-color: #FFFFFF;
@@ -13002,6 +12964,10 @@ a.addNewPlus img {
     height: 24px;
     width: 24px;
     cursor: pointer;
+    border-radius: 8px;
+}
+img.academyDots {
+    border: 1px solid #96969685;
 }
 .archvSrchInput input {
     border-radius: 12px;
@@ -13090,7 +13056,7 @@ a.academy_ul ul {
     padding-left: 0px;
     padding: 14px 15px;
     position: absolute;
-    left: 0px;
+    right: 0px;
     top: 23px;
     min-width: 140px;
     z-index: 111;
@@ -13867,10 +13833,10 @@ g.highcharts-axis.highcharts-yaxis text {
     cursor: pointer;
 }
 .nwDiaCntntIner {
-    height: 455px !important; 
+    height: 496px !important; 
 }
 .phrmLinkUpr, .detailPrescp {	
-    height: 520px !important;	
+    height: 382px !important;	
 }	
 @media screen and (min-height:700px) {	
     .phrmLinkUpr, .detailPrescp {	
@@ -14806,6 +14772,7 @@ input:focus {
   .appointment .ant-picker-suffix{
       display: none;
   }
+
   /* added by satish */
   .languageBox {
     margin: 22px 28px 15px 44px;
@@ -14819,6 +14786,7 @@ input:focus {
     border-radius: 12px;
     background-color: #FFFFFF;
     box-shadow: 0 24px 32px 0 rgba(0,8,8,0.08);
+    margin-top: 35px;
     position: absolute !important;
 }
 .LanguageBoxMain label{
@@ -16063,9 +16031,9 @@ select:-webkit-autofill:focus {
    }
 }
 @media (max-width: 599px){
-  /* .presSrch{
+  .presSrch{
     text-align: left !important;
-   }   */
+   }  
   .presSrch a{
     margin-top: 17px !important;
     margin-bottom: 12px !important;
@@ -16350,9 +16318,6 @@ select:-webkit-autofill:focus {
  .profileIdLft img {
     width: 20px;
   }
-  .emrgncyDataUpr {
-    padding-left: 35px !important;
-  }
 }
 @media screen and (max-width: 467px) {
 .sortBySec label, .sortBySec input {
@@ -16381,23 +16346,9 @@ select:-webkit-autofill:focus {
 .react-confirm-alert-overlay {
     z-index: 999;
 }
-@media (max-width: 568px){
-  .homeBg .cc1-chat-win-user{
+@media (max-width: 568px) {
+  .homeBg .cc1-chat-win-user {
     width: 100% !important;
     margin: 14px 0px;
   }
-}
-@media screen and (max-width: 40em){
-    a.openScndhrf{
-      text-align: left !important;
-    }
-    .scndOptionIner ul{
-      right: initial !important;
-      left: 0px !important;
-    }
-}
-@media (max-width: 1280px){
-    .officeVstRght {
-        text-align: left !important;
-    }
 }
