--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -9637,6 +9637,8 @@ ul.patientHint li {
 }
 .sevicessection {
     width: 97%;
+    margin-bottom: 20px;
+    font-weight: bold;
 }
 .sevicessection .mr_sel .css-yk16xz-control {
     height: 50px !important;
@@ -11414,3 +11416,41 @@ ul.patientHint li {
     padding-bottom: 10px;
     padding-left: 0px;
   }
+
+  /* Added by Ankit */
+
+  .addServContnt {
+    width: 580px;
+    background: #fff;
+    margin: 0 auto;
+    border: none;
+    outline: none;
+    border-radius: 12px;
+    background-color: #FFFFFF;
+    box-shadow: 0 24px 32px 0 rgb(0 8 8 / 8%);
+    margin-top: 35px;
+    padding-top: 6px;
+    padding-bottom: 30px;
+  }
+  .specbutton1 {
+    font-size: 20px  !important;
+    font-weight: bold !important;
+    margin-bottom: 20px !important; 
+  }
+
+  .servSaveBtn button {
+    border-radius: 8px;
+    background-color: #00ABAF !important;
+    color: #FFFFFF;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-align: center;
+    font-family: Muli;
+    width: 90%;
+    padding: 14px 12px;
+    margin-left: 30px;
+   
+    text-transform: capitalize;
+}
